--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,95 +1,127 @@
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%; }
+  height: 100%;
+}
 
 html {
-  font-family: "source-code-pro",sans-serif;
+  font-family: 'source-code-pro',sans-serif;
   font-size: 1.4rem;
-  line-height: 1.8; }
-  @media (min-width: 38em) {
-    html {
-      font-size: 1rem;
-      line-height: 1.4; } }
+  line-height: 1.8;
+}
+@media (min-width: 38em) {
+  html {
+    font-size: 1rem;
+    line-height: 1.4;
+  }
+}
 
 body {
   color: #333333;
   background-color: #111111;
-  text-size-adjust: 100%;
+          text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+      -ms-text-size-adjust: 100%;
+}
 
 a {
   color: inherit;
   font-weight: 700;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   text-transform: uppercase;
   text-decoration: none;
-  -webkit-transition: .4s;
-  transition: .4s; }
-  a:hover, a:focus {
-    color: #444444;
-    text-decoration: none;
-    -webkit-transition: .4s;
-    transition: .4s; }
+  -webkit-transition: 0.4s;
+          transition: 0.4s;
+}
+a:hover,
+a:focus {
+  color: #444444;
+  text-decoration: none;
+  -webkit-transition: 0.4s;
+          transition: 0.4s;
+}
 
 img {
   display: block;
   max-width: 100%;
-  margin: 0 auto; }
-  img.logo {
-    display: inline-block;
-    max-width: 18rem;
-    margin: 0; }
+  margin: 0 auto;
+}
+img.logo {
+  display: inline-block;
+  max-width: 18rem;
+  margin: 0;
+}
 
 hr {
-  border: #FFFF00 solid .6rem;
-  margin: 1.6rem 0; }
+  border: #FFFF00 solid 0.6rem;
+  margin: 1.6rem 0;
+}
 
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.5rem;
   font-weight: bold;
   line-height: 1.25;
   color: inherit;
-  text-rendering: optimizeLegibility; }
+  text-rendering: optimizeLegibility;
+}
 
 h1 {
-  font-size: 2rem; }
+  font-size: 2rem;
+}
 
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+}
 
 h3 {
   margin-top: 1.5rem;
-  font-size: 1.25rem; }
+  font-size: 1.25rem;
+}
 
-h4, h5, h6 {
+h4,
+h5,
+h6 {
   margin-top: 1rem;
-  font-size: 1rem; }
+  font-size: 1rem;
+}
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+}
 
 small {
-  font-size: 90%; }
+  font-size: 90%;
+}
 
 strong {
-  color: inherit; }
+  color: inherit;
+}
 
-ul, ol, dl {
+ul,
+ol,
+dl {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+}
 
-ul, ol {
+ul,
+ol {
   list-style: none;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 main {
   position: relative;
@@ -99,25 +131,31 @@ main {
   margin-bottom: -3.6rem;
   margin-left: auto;
   margin-right: auto;
-  min-height: 100%; }
+  min-height: 100%;
+}
 
 main::after {
-  content: "";
-  display: block; }
+  content: '';
+  display: block;
+}
 
 section {
   position: absolute;
-  bottom: 4.2rem; }
+  bottom: 4.2rem;
+}
 
-footer, main::after {
-  height: 3.6rem; }
+footer,
+main::after {
+  height: 3.6rem;
+}
 
 footer {
   height: 3.6rem;
   width: 100%;
   max-width: 160rem;
   padding-left: 1.5rem;
-  padding-right: 1.5rem; }
+  padding-right: 1.5rem;
+}
 
 .button,
 button {
@@ -140,14 +178,19 @@ button {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .15rem solid #222222;
-  border-radius: 1.8rem; }
-  @media (min-width: 38em) {
-    .button,
-    button {
-      letter-spacing: .1rem; } }
+  border: 0.15rem solid #222222;
+  border-radius: 1.8rem;
+}
+@media (min-width: 38em) {
+  .button,
+  button {
+    letter-spacing: 0.1rem;
+  }
+}
 
-input[type='submit'], input[type='reset'], input[type='button'] {
+input[type='submit'],
+input[type='reset'],
+input[type='button'] {
   display: inline-block;
   padding: 1rem 1.6rem;
   margin-bottom: 0;
@@ -167,31 +210,44 @@ input[type='submit'], input[type='reset'], input[type='button'] {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: .15rem solid #222222;
-  border-radius: 1.8rem; }
-  @media (min-width: 38em) {
-    input[type='submit'], input[type='reset'], input[type='button'] {
-      letter-spacing: .1rem; } }
+  border: 0.15rem solid #222222;
+  border-radius: 1.8rem;
+}
+@media (min-width: 38em) {
+  input[type='submit'],
+  input[type='reset'],
+  input[type='button'] {
+    letter-spacing: 0.1rem;
+  }
+}
 
 .button:hover,
 button:hover {
   text-decoration: none;
-  color: inherit; }
+  color: inherit;
+}
 
-input[type='submit']:hover, input[type='reset']:hover, input[type='button']:hover {
+input[type='submit']:hover,
+input[type='reset']:hover,
+input[type='button']:hover {
   text-decoration: none;
-  color: inherit; }
+  color: inherit;
+}
 
 .button:focus,
 button:focus {
   text-decoration: none;
   color: inherit;
-  outline: 0; }
+  outline: 0;
+}
 
-input[type='submit']:focus, input[type='reset']:focus, input[type='button']:focus {
+input[type='submit']:focus,
+input[type='reset']:focus,
+input[type='button']:focus {
   text-decoration: none;
   color: inherit;
-  outline: 0; }
+  outline: 0;
+}
 
 
 
