--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,8 +11,7 @@
           transform: translateX(-50%) translateY(-50%);
   background-position: center right;
   background-repeat: no-repeat;
-  background-size: cover;
-}
+  background-size: cover; }
 
 [data-action='cursor']::after {
   content: '_';
@@ -23,32 +22,23 @@
   position: absolute;
   -webkit-transform: translate(10%, -10%);
       -ms-transform: translate(10%, -10%);
-          transform: translate(10%, -10%);
-}
+          transform: translate(10%, -10%); }
 
 @-webkit-keyframes blinking {
   0% {
-    opacity: 0;
-  }
+    opacity: 0; }
   50% {
-    opacity: 1;
-  }
+    opacity: 1; }
   100% {
-    opacity: 0;
-  }
-}
+    opacity: 0; } }
 
 @keyframes blinking {
   0% {
-    opacity: 0;
-  }
+    opacity: 0; }
   50% {
-    opacity: 1;
-  }
+    opacity: 1; }
   100% {
-    opacity: 0;
-  }
-}
+    opacity: 0; } }
 
 
 
