--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,11 @@
 <header class="w-100 ph3 ph4-ns pv5 pv6-ns bg-yellow">
   <h1 class="f1 f-subheadline-m f-headline-l lh-title mv1 mv3-ns tracked-tight" data-action="cursor">{{ site.title }}</h1>
-  <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">Merchandise, Art Direction, Professional Design Services for any Project.</h2>
+  <!-- <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">For any Project.</h2> -->
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv4 lh-copy">
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#digital" data-scroll>Digital</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#analog" data-scroll>Analog</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#shop" data-scroll>Shop</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#shop" data-scroll>Contact</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#digital" data-scroll>Graphic Services</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#analog" data-scroll>Art Direction</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#shop" data-scroll>Furniture Shop</a></li>
     </ul>
   </nav>
   <address class="fs-normal wow animated fadeInUp">
