--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,10 @@
   <!-- <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">For any Project.</h2> -->
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv4 lh-copy">
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#digital" data-scroll>Graphic Services</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#analog" data-scroll>Art Direction</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#shop" data-scroll>Furniture Shop</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#furniture" data-scroll>Furniture</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#services" data-scroll>Services</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#about" data-scroll>About</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#contact" data-scroll>Contact</a></li>
     </ul>
   </nav>
   <address class="fs-normal wow animated fadeInUp">
