--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="w-100 ph3 ph4-ns pv5 pv6-ns bg-yellow">
   <h1 class="f1 f-subheadline-m f-headline-l lh-title mv1 mv3-ns tracked-tight" data-action="cursor">{{ site.title }}</h1>
-  <!-- <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">For any Project.</h2> -->
+  <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">Made in Brooklyn, NY.</h2>
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv4 lh-copy">
       <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#furniture" data-scroll>Furniture</a></li>
