--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,11 @@
   <h2 class="f3 f2-ns mv0 lh-title">An independent design consultancy.</h2>
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv4 lh-copy">
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/web-interactive-design.html">Web &amp; Interactive Design</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/branding-strategy.html">Branding &amp; Strategy</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/technology-consulting.html" data-scroll>Technology Consulting</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#work" data-scroll>Work</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#services" data-scroll>Services</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#about" data-scroll>About</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#contact" data-scroll>Contact</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#news" data-scroll>News</a></li>
     </ul>
   </nav>
   <address class="fs-normal wow animated fadeInUp">
