--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="w-100 ph3 ph4-ns pv5 pv6-ns bg-yellow">
+<header class="w-100 tc ph3 ph4-ns pv5 pv6-ns bg-yellow">
   <h1 class="f1 f-subheadline-m f-headline-l lh-title mv0 tracked-tight" data-action="cursor">{{ site.title }}</h1>
   <h2 class="f3 f2-ns mv0 lh-title">An independent design consultancy.</h2>
   <nav class="wow animated fadeIn">
